<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_themes"
    android:id="@+id/rlThemeDialog">


    <ImageButton
        android:id="@+id/ibCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/marginEnd_dialogCancelImageButton"
        android:layout_marginTop="@dimen/marginTop_dialogCancelImageButton"
        android:background="@null"
        android:contentDescription="@string/content_description_clickable"
        app:srcCompat="@drawable/ic_cancel" />

    <Button
        android:id="@+id/btnThemasTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ibCancel"
        android:layout_marginTop="@dimen/marginTop_dialogTitleButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_aqua"
        android:clickable="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:text="@string/txtTitleButton_themes"
        android:textAlignment="center"
        android:textColor="@color/txt_aqua_button"
        android:textSize="@dimen/textSize_buttons" />

    <ToggleButton
        android:id="@+id/tbDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnThemasTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_topDialogButton"
        android:background="@drawable/bg_button_purple"
        android:checked="false"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/txtButton_defaultTheme"
        android:textOn="@string/txtButton_defaultTheme"
        android:textSize="@dimen/textSize_buttons" />

    <ToggleButton
        android:id="@+id/tbDarkness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbDefault"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/txtButton_darkTheme"
        android:textOn="@string/txtButton_darkTheme"
        android:textSize="@dimen/textSize_buttons" />

    <ToggleButton
        android:id="@+id/tbLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbDarkness"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/txtButton_lightTheme"
        android:textOn="@string/txtButton_lightTheme"
        android:textSize="@dimen/textSize_buttons"  />

    <ToggleButton
        android:id="@+id/tbAqua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbLight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/txtButton_aquaTheme"
        android:textOn="@string/txtButton_aquaTheme"
        android:textSize="@dimen/textSize_buttons" />

    <ToggleButton
        android:id="@+id/tbPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbAqua"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/txtButton_purpleTheme"
        android:textOn="@string/txtButton_purpleTheme"
        android:textSize="@dimen/textSize_buttons" />

    <ToggleButton
        android:id="@+id/tbHorrorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbPurple"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_betweenDialogButtons"
        android:background="@drawable/bg_button_purple"
        android:fontFamily="@font/almendra_bold"
        android:paddingBottom="@dimen/paddingBottom_buttons"
        android:textAlignment="center"
        android:textColor="@color/txt_purple_button"
        android:textOff="@string/txtButton_scaryTheme"
        android:textOn="@string/txtButton_scaryTheme"
        android:textSize="@dimen/textSize_buttons" />

</RelativeLayout>